# yarukoto-tui

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tasknomi/: app.py  file_io.py  screens.py  validators.py
yarukoto/: app.py  app.tcss  classes.py  data_processors.py  file_io.py  screens.py  services.py  widgets.py
